@@ -401,8 +401,9 @@
         </arquillian.wildfly.jvm.args.jbossmodules>
         <arquillian.wildfly.jvm.args>${arquillian.wildfly.jvm.args.java-version} ${arquillian.wildfly.jvm.args.jacoco} ${arquillian.wildfly.jvm.args.jbossmodules}</arquillian.wildfly.jvm.args>
 
+        <pax-exam.jvm.args.java-version></pax-exam.jvm.args.java-version>
         <pax-exam.jvm.args.jacoco></pax-exam.jvm.args.jacoco>
-        <pax-exam.jvm.args>${pax-exam.jvm.args.jacoco}</pax-exam.jvm.args>
+        <pax-exam.jvm.args>${pax-exam.jvm.args.java-version} ${pax-exam.jvm.args.jacoco}</pax-exam.jvm.args>
 
         <!--
             The path to a single merged JaCoCo coverage file including all of the coverage data for all modules.
@@ -1686,6 +1687,9 @@
                 <arquillian.wildfly.jvm.args.java-version>
                     -Djdk.attach.allowAttachSelf=true
                 </arquillian.wildfly.jvm.args.java-version>
+                <pax-exam.jvm.args.java-version>
+                    --add-modules=java.xml.bind
+                </pax-exam.jvm.args.java-version>
             </properties>
             <modules>
                 <!-- Nothing at the moment -->
@@ -1708,6 +1712,9 @@
                 <arquillian.wildfly.jvm.args.java-version>
                     -Djdk.attach.allowAttachSelf=true
                 </arquillian.wildfly.jvm.args.java-version>
+                <pax-exam.jvm.args.java-version>
+                    --add-modules=java.xml.bind
+                </pax-exam.jvm.args.java-version>
             </properties>
             <modules>
                 <!-- Nothing at the moment -->
